# voksa

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  flake.nix
.cargo/: config.toml
.claude/: settings.json  settings.local.json
.claude/agents/: verifier.md
.claude/hooks/: auto-push.sh  fmt.sh  guard.sh  lib.sh  stop-gate.sh
.claude/hooks/linux/: env.sh  fmt.sh  push.sh  test.sh
.claude/skills/phase-commit/: SKILL.md
.claude/skills/phase-start/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml  redeploy-site.yml
crates/klattsch-core-fork/: .cargo_vcs_info.json  Cargo.toml
crates/klattsch-core-fork/src/: dsp.rs  params.rs  synth.rs
crates/voksa-cli/: Cargo.toml
crates/voksa-cli/src/: args.rs  config.rs  lib.rs  main.rs  playback.rs  wav.rs
crates/voksa-cli/tests/: cli_e2e.rs  realtime.rs  wav_roundtrip.rs
crates/voksa-component/: Cargo.toml
crates/voksa-component/src/: lib.rs
crates/voksa-component/wit/: voksa.wit
crates/voksa-console/: Cargo.toml
crates/voksa-console-demo/: Cargo.toml  Dioxus.toml
crates/voksa-console-demo/assets/: quine-tokens.css
crates/voksa-console-demo/src/: main.rs
crates/voksa-console/assets/: console.css  help-text.json
crates/voksa-console/src/: assets.rs  engine.rs  help.rs  lib.rs
crates/voksa-console/src/audio/: graph.rs  mod.rs  player.js
crates/voksa-console/src/model/: config.rs  descriptor.rs  logic.rs  mod.rs  path.rs  presets.rs  transcript.rs  wav.rs  waveform.rs
crates/voksa-console/src/ui/: about.rs  console.rs  editors.rs  help.rs  mod.rs  racks.rs  rows.rs  source.rs  speak.rs  store.rs  title.rs
crates/voksa-console/tests/: c3_model.rs  c4_model.rs  config_io.rs  config_roundtrip.rs  help.rs  model.rs  sentences.rs
crates/voksa-core/: Cargo.toml
crates/voksa-core/src/: attitudinal.rs  classify.rs  clusters.rs  compiler.rs  letters.rs  lib.rs  normalize.rs  pause.rs  phonemes.rs  prosody.rs  schedule.rs  stress.rs  syllable.rs  transcribe.rs  word.rs
crates/voksa-core/tests/: attitudinal.rs  cll_stress_pauses.rs  cll_vectors.rs  fuzz.proptest-regressions  fuzz.rs  naturalness.rs  normalize.proptest-regressions  normalize.rs  properties.proptest-regressions  properties.rs  prosody.rs  schedule_compiler.rs  transcribe.rs  voice_table.rs
crates/voksa-core/tests/snapshots/: attitudinal__snapshot_anger_mi_fengu_oonai.snap  attitudinal__snapshot_complaint_coi_munje_oi.snap  attitudinal__snapshot_fear_coi_munje_ii.snap  attitudinal__snapshot_joy_coi_munje_ui.snap  attitudinal__snapshot_sadness_mi_klama_uu.snap  naturalness__snapshot_naturalness_off_coi_munje.snap  normalize__compile_speaks_figures.snap  prosody__snapshot_prosodic_coi_munje.snap  prosody__snapshot_prosodic_declarative.snap  prosody__snapshot_prosodic_xu.snap  schedule_compiler__snapshot_buffer_klama.snap  schedule_compiler__snapshot_buffer_vrusi.snap  schedule_compiler__snapshot_coi_munje.snap  schedule_compiler__snapshot_dotside.snap  schedule_compiler__snapshot_hesitation.snap  schedule_compiler__snapshot_la_djan_cu_klama.snap  schedule_compiler__snapshot_mi_klama.snap  schedule_compiler__snapshot_stress_collision.snap
crates/voksa-engine-klattsch/: Cargo.toml
crates/voksa-engine-klattsch/examples/: render_a.rs  render_inventory.rs
crates/voksa-engine-klattsch/src/: lib.rs  lower.rs
crates/voksa-engine-klattsch/tests/: attitudinal_acoustic.rs  attitudinal_lowering.rs  flutter_acoustic.rs  formant_acceptance.rs  phoneme_consonants.rs  phoneme_diphthong.rs  phoneme_sibilants.rs  phoneme_vowels.rs  prosody_acoustic.rs  render_bounds.rs  schedule_determinism.rs  schedule_snapshots.rs  utterance.rs
crates/voksa-engine-klattsch/tests/snapshots/: schedule_determinism__schedule_lowering_is_deterministic.snap  schedule_snapshots__snapshot_diphthong_ai.snap  schedule_snapshots__snapshot_sibilant_s.snap  schedule_snapshots__snapshot_stop_t.snap  schedule_snapshots__snapshot_vowel_a.snap
crates/voksa-testkit/: Cargo.toml
crates/voksa-testkit/src/: lib.rs
crates/voksa-web/: Cargo.toml  webdriver.json
crates/voksa-web/src/: lib.rs
crates/voksa-web/tests/: fuzz.rs  sentences.rs  version.rs  web.rs
crates/voksa-web/tests/proptest-regressions/: fuzz.txt
crates/voksa-web/www/: index.html  sentences.json  voksa-processor.js
docs/: CLAUDE.md  PLAN.md  README-handoff.md  chatgpt-report.md  claude-final.md  formants.md  gemini-report.md  handoff-dhilipsiva-dev.md  phase0-prompt.md  phonology.md
docs/adr/: 0001-engine-choice.md  0002-wasip2-component.md  0003-console-engine-in-app.md
docs/design/tuning-console/: README.md  Voksa Component Spec.dc.html  Voksa IA & Flows.dc.html  Voksa Phone Preview.dc.html  Voksa Workbench.dc.html  voksa-DESIGN-NOTES.md  voksa-engine-data.json  voksa-help-text.json
docs/design/tuning-console/_ds/quine-design-system-b59e1bb0-268a-41cb-aec6-2c083baaa557/: _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
docs/design/tuning-console/_ds/quine-design-system-b59e1bb0-268a-41cb-aec6-2c083baaa557/tokens/: base.css  colors.css  effects.css  fonts.css  motion.css  spacing.css  typography.css
docs/listening/: phase10.md  phase11.md  phase7.md
docs/research/: 02-architecture-v2.md  03-implementation-playbook.md
xtask/: Cargo.toml
xtask/src/: main.rs
