[workspace]
resolver = "3"
members = [
    "crates/voksa-core",
    "crates/voksa-cli",
    "crates/voksa-web",
    "crates/voksa-engine-klattsch",
    "crates/voksa-testkit",
    "xtask",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
voksa-core = { path = "crates/voksa-core" }
voksa-engine-klattsch = { path = "crates/voksa-engine-klattsch" }
voksa-testkit = { path = "crates/voksa-testkit" }
# wasm-bindgen-test drives the headless browser tests (voksa-web dev-dep only);
# voksa-web itself has NO wasm-bindgen runtime dep (raw C-ABI, zero imports).
wasm-bindgen-test = "0.3"
# Native CLI audio (Phase 8): cpal Apache-2.0, rtrb MIT/Apache — realtime-safe
# SPSC ring feeding the cpal output callback (docs/research/02-architecture-v2.md).
cpal = "0.18"
rtrb = "0.3"
# 0.1.0 was yanked; the crate is 3 commits young — pin exactly, revisit at the
# Phase-2 engine decision gate.
klattsch-core = "=0.1.1"
# dev-only stack (must never enter the shipping dependency tree)
spectrum-analyzer = "1.7"
hound = "3.5"
insta = "1"
proptest = "1.11"

# Size-optimized release profile (spec: the web crate). Applied workspace-wide
# because cargo only allows `panic` in the root [profile.release]; tests are
# unaffected (nextest builds with the dev/test profile).
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
