[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa build/verify automation (not published)"
publish = false

[dependencies]
voksa-core.workspace = true
voksa-engine-klattsch.workspace = true
voksa-testkit.workspace = true
