[package]
name = "voksa-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa TTS command-line interface"

[lib]
name = "voksa_cli"
path = "src/lib.rs"

[[bin]]
name = "voksa"
path = "src/main.rs"

[dependencies]
voksa-core.workspace = true
voksa-engine-klattsch.workspace = true
cpal.workspace = true
rtrb.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# WAV read-back for round-trip tests only — never a runtime dependency.
hound.workspace = true
