[package]
name = "voksa-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
# wit-bindgen / wit-bindgen-rt are `Apache-2.0 WITH LLVM-exception` — approved
# and recorded in docs/adr/0002-wasip2-component.md (strictly more permissive
# than plain Apache-2.0; confined to this crate).
license.workspace = true
description = "voksa TTS as a wasm32-wasip2 WebAssembly component (WIT: voksa:synth)"
# Build artifact only — never published (see ADR 0002).
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
voksa-web.workspace = true
wit-bindgen.workspace = true
