[package]
name = "voksa-console"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa tuning console: Dioxus component library (QUINE redesign, ADR 0003)"
# crates.io publishing is post-v0.1 backlog (see PLAN.md).
publish = false

[dependencies]
# The engine, linked as a plain rlib (ADR 0003): synth/transcription/
# default_params are direct calls — no second wasm, no C-ABI marshalling.
voksa-web.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
# The config round-trip contract test: exported JSON must parse through the
# CLI's REAL Config (so `voksa --config` replays exactly what the console
# played). Dev-only — cpal/alsa never enter the wasm build.
voksa-cli.workspace = true
# Round-trip assertions compare against the core option structs/tables.
voksa-core.workspace = true
