[package]
name = "voksa-console"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa tuning console: Dioxus component library (QUINE redesign, ADR 0003)"
# crates.io publishing is post-v0.1 backlog (see PLAN.md).
publish = false

[dependencies]
# The engine, linked as a plain rlib (ADR 0003): synth/transcription/
# default_params are direct calls — no second wasm, no C-ABI marshalling.
voksa-web.workspace = true
# no_std front-end — the CompileError type the engine facade surfaces (already
# linked transitively via voksa-web; direct dep just names the type).
voksa-core.workspace = true
serde.workspace = true
serde_json.workspace = true
dioxus.workspace = true

# Browser-only interop (ADR 0003): the main-thread audio graph + WAV download.
# The player worklet is plain JS (include_str!); no Rust runs in the worklet.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
gloo-timers = { workspace = true, features = ["futures"] }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = [
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioWorkletNodeOptions",
    "BaseAudioContext",
    "AudioNode",
    "AudioDestinationNode",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "MessagePort",
    "MessageEvent",
    "Window",
    "Document",
    "HtmlAnchorElement",
] }

[dev-dependencies]
# The config round-trip contract test: exported JSON must parse through the
# CLI's REAL Config (so `voksa --config` replays exactly what the console
# played). Dev-only — cpal/alsa never enter the wasm build.
voksa-cli.workspace = true
