[package]
name = "voksa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa TTS core: no_std + alloc Lojban synthesis engine"
# crates.io publishing is post-v0.1 backlog (see PLAN.md).
publish = false

[dependencies]

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
