[package]
name = "voksa-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa dev-only test harness: FFT formant measurement + WAV helpers"
publish = false

# This crate never ships: it is consumed only by other crates'
# [dev-dependencies] and by the unpublished xtask tool, so hound /
# spectrum-analyzer / pitch-detection never enter the shipping tree.
[dependencies]
spectrum-analyzer.workspace = true
hound.workspace = true
