[package]
name = "voksa-web"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "voksa TTS browser adapter: raw-C-ABI WASM synthesized inside an AudioWorklet"
# crates.io publishing is post-v0.1 backlog (see PLAN.md).
publish = false

[lib]
# cdylib: the .wasm artifact. rlib: lets `tests/` integration tests and native
# unit tests link the crate. The shipping surface is raw `extern "C"` exports
# with NO wasm-bindgen runtime, so the module has zero imports and the worklet
# instantiates it with `new WebAssembly.Instance(module, {})`.
crate-type = ["cdylib", "rlib"]

[dependencies]
voksa-core.workspace = true
voksa-engine-klattsch.workspace = true

[dev-dependencies]
# The only wasm-bindgen-family dependency, and it is dev-only: it supplies the
# `#[wasm_bindgen_test]` harness for `wasm-pack test --headless --chrome`. The
# functions under test are plain Rust, so no wasm-bindgen runtime dep is needed.
wasm-bindgen-test.workspace = true
# Native-only fuzz suite (tests/fuzz.rs, Phase-11 W1).
proptest.workspace = true

# rustc emits bulk-memory / nontrapping-fptoint / sign-ext by default for wasm32
# these days, and `-C target-feature=+simd128` (see .cargo/config.toml) adds
# SIMD ops; wasm-opt validates with these OFF unless told otherwise (and
# wasm-pack 0.15 swallows the wasm-opt failure, silently skipping optimization).
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-Oz",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
    "--enable-simd",
]
